# zmqd

./: meson.build
examples/: syncpub.d  syncsub2.d
subprojects/: zeromq.wrap
